syntax = "proto3";

package proto;

service IngestLimitsFrontend {
  rpc CheckLimits(CheckLimitsRequest) returns (CheckLimitsResponse) {}
}

service IngestLimits {
  rpc CheckLimits(CheckLimitsRequest) returns (CheckLimitsResponse) {}
  rpc GetAssignedPartitions(GetAssignedPartitionsRequest) returns (GetAssignedPartitionsResponse) {}
}

message CheckLimitsRequest {
  string tenant = 1;
  repeated StreamMetadata streams = 2;
}

message CheckLimitsResponse {
  repeated CheckLimitsResult results = 1;
}

message CheckLimitsResult {
  uint64 streamHash = 1;
  uint32 reason = 2;
}

message GetAssignedPartitionsRequest {}

message GetAssignedPartitionsResponse {
  map<int32, int64> assignedPartitions = 1;
}

message StreamMetadata {
  uint64 streamHash = 1;
  uint64 totalSize = 2;
}

message StreamMetadataRecord {
  string zone = 1;
  string tenant = 2;
  StreamMetadata metadata = 3;
}
